--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
   "name": "vue-app",
-  "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite --mode dev",
     "build": "vite build",
-    "preview": "vite preview"
+    "serve": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons": "^0.0.11",
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.4.0",
-    "element-plus": "^2.3.10",
-    "scss": "^0.2.4",
-    "vue": "^3.3.4",
+    "element-plus": "1.1.0-beta.19",
+    "path": "^0.12.7",
+    "vue": "^3.2.47",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.2.3",
-    "sass": "^1.66.1",
-    "vite": "^4.4.5"
+    "@vitejs/plugin-vue": "^4.1.0",
+    "sass": "^1.62.1",
+    "scss": "^0.2.4",
+    "vite": "^4.3.2",
+    "vite-plugin-top-level-await": "^1.3.1"
   }
 }
